Bug #21513
closedConverting endless range to set hangs
Description
Converting endless range to array raises:
ruby -e '(1..).to_a'
-e:1:in 'Range#to_a': cannot convert endless range to an array (RangeError)
from -e:1:in '<main>'
but converting to set does not:
I think it makes to raise in both cases for consistency. Something like this should do the trick:
diff --git i/prelude.rb w/prelude.rb
index f49cada637..11bfa3fc95 100644
--- i/prelude.rb
+++ w/prelude.rb
@@ -30,6 +30,10 @@ module Enumerable
# Makes a set from the enumerable object with given arguments.
# Passing arguments to this method is deprecated.
def to_set(*args, &block)
+ if self.class == Range && self.end.nil?
+ raise RangeError, "cannot convert endless range to a set"
+ end
+
klass = if args.empty?
Set
else
diff --git i/test/ruby/test_range.rb w/test/ruby/test_range.rb
index f875c0ab40..27b968641b 100644
--- i/test/ruby/test_range.rb
+++ w/test/ruby/test_range.rb
@@ -1541,4 +1541,11 @@ def test_overlap?
assert_not_operator((1...3), :overlap?, (3..4))
assert_not_operator((...3), :overlap?, (3..))
end
+
+ def test_to_set
+ assert_equal(Set[], (1..-1).to_set)
+ assert_equal(Set[1, 2, 3], (1..3).to_set)
+
+ assert_raise(RangeError) { (239..).to_set }
+ end
end
If this patch is accepted, I'll open a PR.
Updated by Dan0042 (Daniel DeLorme) about 1 year ago
Raising an error should be the case for ANY endless range operations that result in an infinite loop and memory consumption. This is a very costly and hard to debug failure mode, and it happens for a large number of endless range methods.
Updated by nobu (Nobuyoshi Nakada) about 1 year ago
Thank you, good catch.
I think that check should be in Range#to_set, as well as Range#to_a.
Updated by viralpraxis (Iaroslav Kurbatov) about 1 year ago
I've opened https://github.com/ruby/ruby/pull/13902
Updated by nobu (Nobuyoshi Nakada) about 1 year ago
I suspect this is a bug fix instead of a new feature, isn't it?
Updated by viralpraxis (Iaroslav Kurbatov) about 1 year ago
- Tracker changed from Feature to Bug
- Backport set to 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: UNKNOWN
Updated by viralpraxis (Iaroslav Kurbatov) about 1 year ago
- Subject changed from Raise on converting endless range to set to Converting endless range to set hangs
Updated by Dan0042 (Daniel DeLorme) about 1 year ago
What's your opinion on adding the same raise/check for the following methods? They present the same infinite loop problem.
#count
#all?
#collect / #map
#collect_concat / #flat_map
#compact
#drop
#drop_while
#filter
#filter_map
#find_all / #select
#grep
#grep_v
#group_by
#inject / #reduce
#max_by / #min_by / #minmax_by
#none?
#one?
#partition
#sort / #sort_by
#sum
#tally
#to_h
#uniq
Updated by viralpraxis (Iaroslav Kurbatov) about 1 year ago
- Status changed from Open to Closed
Applied in changeset git|d4020dd5faf28486123853e7f00c36139fc07793.
[Bug #21513] Raise on converting endless range to set
ref: https://bugs.ruby-lang.org/issues/21513
Before this patch, trying to convert endless range (e.g. (1..)) to set
(using to_set) would hang
Updated by mame (Yusuke Endoh) 10 months ago
- Related to Bug #21654: Set#new calls extra methods compared to previous versions added
Updated by mame (Yusuke Endoh) 10 months ago
- Status changed from Closed to Open
- Assignee set to knu (Akinori MUSHA)
The fix introduced another inconsistency:
$ ruby -e 'Enumerator.new(Float::INFINITY) {|g| loop { g << 1 } }.to_set'
-e:1:in 'Enumerable#to_set': cannot initialize Set from an object with infinite size (ArgumentError)
from -e:1:in '<main>'
$ ruby -e 'Enumerator.new(Float::INFINITY) {|g| loop { g << 1 } }.to_a # hungs'
I think checking if Range#end is nil is good enough, instead of calling #size. Note that calling #size caused another practical issue #21654.
@knu (Akinori MUSHA) What do you think?
Updated by knu (Akinori MUSHA) 10 months ago
I could add Enumerator#to_a that performs a size check, but that would break tests for Enumerator.produce that defaults the size to infinity. We need more consideration.
Updated by Anonymous 10 months ago
- Status changed from Open to Closed
Applied in changeset git|25c871fddf430d18a1f0a794a0f81598e9b79727.
Revert "[Bug #21513] Raise on converting endless range to set"
This reverts commit d4020dd5faf28486123853e7f00c36139fc07793, which introduced performance regression for objects like ActiveRecord::Relation by calling the costly #size method on them.
Updated by knu (Akinori MUSHA) 10 months ago
- Related to Feature #21701: Enumerator.produce accepts an optional `size` keyword argument added